client/src/App.css
/* #root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
 
} */
  body {

  
      margin: 0;
      display: flex;
      place-items: center;
      min-width: 320px;
      min-height: 100vh;  
     background-color: aqua;
  }
.navBar {
  position: fixed;
  top: 0;
  width: 100%;
  left: 0;
  
}
h1 {
  font-family: "Bruno Ace", sans-serif;
  font-size: 3.2em;
  line-height: 1.1;
  color: white;
  /* text-align: left; */
}

/* .title {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: 0;
} */
/* once i created this for this class that hamburger menu appeared get rid of this if you want im trying to move the company name to the far left */
/* .flex  {
  display: flex;
  justify-content: space-between;
  align-items: center; 
  margin-left: 0;
} */

 

.flex {
  align-items: center;
}

.hidden {
  margin-left:-25%;
  
}


.nav.bg-gray-800 {
  display: block;
  text-align: end;
}

.material-symbols-outlined {
 
position: absolute;
top: 10;
left: 10;

  font-size: 50px;
  font-variation-settings:
  'FILL' 0,
  'wght' 400,
  'GRAD' 0,
  'opsz' 24
}

